--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <p class="para1">COMFORT</p>
    </div>
    <div class="column2">
-    <input type="text" placeholder="search here" >
+    <input type="text" placeholder="Search here" >
    </div>
    <div class="column3">
     <i class="fa-solid fa-circle-user" style="width:20px;margin-top: 10px;"></i>
@@ -36,8 +36,13 @@
 </div>
 
 <div class="picture2">
-    <img src="./img/Rectangle 58.png" alt="image1"/>
-    <img src="./img/Rectangle 59.png" alt="image2"/>   
+    <div>
+        <img src="./img/Rectangle 58.png" alt="image1"/>
+    </div>
+    <div>
+        <img src="./img/Rectangle 59.png" alt="image2"/> 
+    </div>
+      
 </div>
 </body>
 </html>
