--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <input type="text" placeholder="Search here" >
    </div>
    <div class="column3">
-    <i class="fa-solid fa-circle-user" style="width:20px;margin-top: 10px;"></i>
-    <img src="./img/Vector.svg" style="margin-left: 25px; width:15px; margin-top: 10px;">
-    <img src="./img/Vector1.svg" style="margin-top:10px; width:15px; margin-left: 70px;">
+    <i class="fa-solid fa-circle-user" style="width:20px;"></i>
+    <img src="./img/Vector.svg" style=" width:15px; margin-left: 50px;">
+    <img src="./img/Vector1.svg" style=" width:15px; margin-left: 70px;">
 </div>
 </header>
 <nav>
@@ -31,9 +31,9 @@
     <a href="#">Balcony</a>
 </nav>
 <div class="picture1">
-    <img src= "./img/unsplash1.jpg" alt="image" >
-    <img src= "./img/virender-singh-hE0nmTffKtM-unsplash 1.png" alt="image" >
-    <img src= "./img/unsplaSH2.jpeg" alt="image" > 
+    <img src= "./img/Pexels Photo by Pixabay.png" alt="image" >
+    <img src= "./img/virender-singh-hE0nmTffKtM-unsplash 1.png" alt="image">
+    <img src= "./img/Pexels Photo by Tan Danh.png" alt="image" > 
 </div>
 </body>
 </html>
